# pingu_ai_coding_pair_programming

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  doppler.yaml  package-lock.json  package.json  realtime_dev_agent.js
config/: common-typos.json  developer-error-taxonomy.json  issue-explanations.json  issue-kinds.json
docs/: publishing.md  release.md
lib/: ai-provider-claude.js  ai-provider-codex.js  ai-provider-copilot.js  ai-provider-openai.js  ai-provider.js  ai-resolution-policy.js  analyzer-async.js  analyzer-complexity.js  analyzer-control-flow.js  analyzer-developer-errors.js  analyzer-elixir-doc-spec.js  analyzer-elixir-syntax.js  analyzer-hygiene.js  analyzer-import-bindings.js  analyzer-logic-errors.js  analyzer-module-resolution.js  analyzer-profile.js  analyzer-python-naming.js  analyzer-redundant.js  analyzer-secrets.js  analyzer-security.js  analyzer-structured-text.js  analyzer-syntax-scan.js  analyzer-typos.js  analyzer-undefined-correction.js  analyzer-undefined-variables.js  analyzer-unused.js  analyzer.js  autofix-guard.js  circular-imports.js  cli-args.js  cli-fix.js  cli-targets.js  cli.js  comment-task-ai.js  follow-up.js  function-body.js  function-metadata.js  function-signature.js  generation-blueprint.js  (+25 more)
plugin/: 00_pingu_diagnostic_manager.lua  pingu_dev_agent.vim  realtime_dev_agent.vim
snippets/pingu_tests/c/library-app/: CMakeLists.txt
snippets/pingu_tests/c/library-app/include/: pingu.h
snippets/pingu_tests/c/library-app/src/: pingu.c
snippets/pingu_tests/c/library-app/tests/: test_pingu.c
(+161 files in other folders)
